--- a/bajoWebMpa/template/default/layout/default.njk
+++ b/bajoWebMpa/template/default/layout/default.njk
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AdminLTE 3 | Starter</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-    <link rel="stylesheet" href="{{ assetsDir('bajoWebMpaFontawesome') }}/fontawesome-free-6.4.2-web/css/all.min.css">
+    <link rel="stylesheet" href="{{ assetDir('bajoWebMpaFontawesome') }}/fontawesome-free-6.4.2-web/css/all.min.css">
     {% for c in theme.css %}
     <link rel="stylesheet" href="{{ c }}">
     {% endfor %}
@@ -55,7 +55,7 @@
             <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
               <a href="#" class="dropdown-item">
                 <div class="media">
-                  <img src="{{ assetsDir('bajoWebMpaAdminlte') }}/adminlte-3.2/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
+                  <img src="{{ assetDir('bajoWebMpaAdminlte') }}/adminlte-3.2/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
                   <div class="media-body">
                     <h3 class="dropdown-item-title">
                       Brad Diesel
@@ -73,7 +73,7 @@
               <div class="dropdown-divider"></div>
               <a href="#" class="dropdown-item">
                 <div class="media">
-                  <img src="{{ assetsDir('bajoWebMpaAdminlte') }}/adminlte-3.2/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
+                  <img src="{{ assetDir('bajoWebMpaAdminlte') }}/adminlte-3.2/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
                   <div class="media-body">
                     <h3 class="dropdown-item-title">
                       John Pierce
@@ -91,7 +91,7 @@
               <div class="dropdown-divider"></div>
               <a href="#" class="dropdown-item">
                 <div class="media">
-                  <img src="{{ assetsDir('bajoWebMpaAdminlte') }}/adminlte-3.2/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
+                  <img src="{{ assetDir('bajoWebMpaAdminlte') }}/adminlte-3.2/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
                   <div class="media-body">
                     <h3 class="dropdown-item-title">
                       Nora Silvester
@@ -153,13 +153,13 @@
       </nav>
       <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <a href="index3.html" class="brand-link">
-          <img src="{{ assetsDir('bajoWebMpaAdminlte') }}/adminlte-3.2/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+          <img src="{{ assetDir('bajoWebMpaAdminlte') }}/adminlte-3.2/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
           <span class="brand-text font-weight-light">AdminLTE 3</span>
         </a>
         <div class="sidebar">
           <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-              <img src="{{ assetsDir('bajoWebMpaAdminlte') }}/adminlte-3.2/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+              <img src="{{ assetDir('bajoWebMpaAdminlte') }}/adminlte-3.2/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
               <a href="#" class="d-block">Alexander Pierce</a>
