--- a/bajoWebMpa/template/default/layout/default.njk
+++ b/bajoWebMpa/template/default/layout/default.njk
@@ -6,7 +6,7 @@
     <title>AdminLTE 3 | Starter</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
     <link rel="stylesheet" href="{{ assetDir('bajoWebMpaFontawesome') }}/fontawesome-free-6.4.2-web/css/all.min.css">
-    {% for c in theme.css %}
+    {% for c in _meta.theme.css %}
     <link rel="stylesheet" href="{{ c }}">
     {% endfor %}
   </head>
@@ -252,7 +252,7 @@
         All rights reserved.
       </footer>
     </div>
-    {% for s in theme.script %}
+    {% for s in _meta.theme.script %}
     <script src="{{ s }}"></script>
     {% endfor %}
   </body>
